; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_do_rpc_stop_lease.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_do_rpc_stop_lease.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lease_state = common dso_local global i64 0, align 8
@lst_on = common dso_local global i64 0, align 8
@lst_finish = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_rpc_stop_lease() #0 {
  %1 = load i64, i64* @lease_state, align 8
  %2 = load i64, i64* @lst_on, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @lst_finish, align 4
  %7 = call i32 @lease_change_state(i32 %6)
  %8 = call i32 (...) @run_rpc_lease()
  br label %9

9:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @lease_change_state(i32) #1

declare dso_local i32 @run_rpc_lease(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
